[gd_scene load_steps=4 format=2]

[ext_resource path="res://Garage.gd" type="Script" id=1]
[ext_resource path="res://ThemeMain.tres" type="Theme" id=2]
[ext_resource path="res://Assets/VanHunter/cars/car.png" type="Texture" id=3]

[node name="Garage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBack" type="Button" parent="."]
margin_top = 1830.0
margin_right = 130.0
margin_bottom = 1920.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCars" type="Button" parent="HBoxContainer"]
margin_right = 267.0
margin_bottom = 89.0
size_flags_horizontal = 3
text = "Cars"

[node name="btnGuns" type="Button" parent="HBoxContainer"]
margin_left = 271.0
margin_right = 538.0
margin_bottom = 89.0
size_flags_horizontal = 3
text = "Guns"

[node name="btnCoins" type="Button" parent="HBoxContainer"]
margin_left = 542.0
margin_right = 809.0
margin_bottom = 89.0
size_flags_horizontal = 3
text = "Coins"

[node name="btnEnergy" type="Button" parent="HBoxContainer"]
margin_left = 813.0
margin_right = 1080.0
margin_bottom = 89.0
size_flags_horizontal = 3
text = "Energy"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.6
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnBack" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/btnGuns" to="." method="_on_btnGuns_pressed"]
[connection signal="pressed" from="HBoxContainer/btnCoins" to="." method="_on_btnCoins_pressed"]
[connection signal="pressed" from="HBoxContainer/btnEnergy" to="." method="_on_btnEnergy_pressed"]
